# elf_pipeline

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pylintrc  Dockerfile  Makefile  README.md  pre-commit  pyproject.toml  refactor_epd_decompression.py
calibration/: ela_cal_epde.txt  ela_cal_epdi.txt  elb_cal_epde.txt  elb_cal_epdi.txt
doc/source/: conf.py  index.rst
doc/source/pages/: db.rst  metric.rst  modules.rst  output.rst  processor.idpu.rst  processor.rst  request.downlink.rst  request.rst  util.rst
docker/: Dockerfile  build_image.sh
docs/source/pages/: coordinator.rst  modules.rst  output.rst  processor.rst  util.rst
mastercdf/: ela_l1_eng_00000000_v01.cdf  ela_l1_eng_00000000_v01.skt  ela_l1_epd_00000000_v01.cdf  ela_l1_epd_00000000_v01.skt  ela_l1_epdef_00000000_v01.cdf  ela_l1_epdef_00000000_v01.skt  ela_l1_epdes_00000000_v01.cdf  ela_l1_epdes_00000000_v01.skt  ela_l1_epdif_00000000_v01.cdf  ela_l1_epdif_00000000_v01.skt  ela_l1_epdis_00000000_v01.cdf  ela_l1_epdis_00000000_v01.skt  ela_l1_fgf_00000000_v01.cdf  ela_l1_fgf_00000000_v01.skt  ela_l1_fgs_00000000_v01.cdf  ela_l1_fgs_00000000_v01.skt  ela_l1_mrma_00000000_v01.cdf  ela_l1_mrma_00000000_v01.skt  ela_l1_mrmi_00000000_v01.cdf  ela_l1_mrmi_00000000_v01.skt  ela_l1_state_00000000_v01.cdf  ela_l1_state_00000000_v01.skt  ela_l1_state_00000000_v02.cdf  ela_l1_state_00000000_v02.skt  ela_l2_epd_00000000_v01.cdf  ela_l2_epd_00000000_v01.skt  ela_l2_fgm_00000000_v01.cdf  ela_l2_fgm_00000000_v01.skt  elb_l1_eng_00000000_v01.cdf  elb_l1_eng_00000000_v01.skt  elb_l1_epd_00000000_v01.cdf  elb_l1_epd_00000000_v01.skt  elb_l1_epdef_00000000_v01.cdf  elb_l1_epdef_00000000_v01.skt  elb_l1_epdes_00000000_v01.cdf  elb_l1_epdes_00000000_v01.skt  elb_l1_epdif_00000000_v01.cdf  elb_l1_epdif_00000000_v01.skt  elb_l1_epdis_00000000_v01.cdf  elb_l1_epdis_00000000_v01.skt  (+30 more)
src/: README.md  blah.csv  blah2.csv  coordinator.py  elb_l0_fgs_20200924_27137.pkt  elb_l1_fgs_20200924_v01.cdf  my_flow.py  reprocess_eng.sh  reprocess_epd.sh  reprocess_fgm.sh  reprocess_mrm.sh  reprocess_state.sh  run.py  temp.csv
src/data_type/: completeness_config.py  downlink.py  exception.py  packet_info.py  pipeline_config.py  pipeline_query.py  processing_request.py  time_type.py
src/db/: downlink.py  downlink_utils.py  processing_request.py  request_manager.py
src/mastercdf/: README.md
src/metric/: completeness.py
src/output/: exception_collector.py  file_name_converter.py  pipeline_file_mapper.py  pipeline_server_manager.py  server_manager.py
src/output/downlink/: downlink_manager.py  downlink_utils.py
src/output/metric/: completeness.py
src/processor/: __init__.py  completeness.py  eng_processor.py  fgm_processor.py  idpu_processor.py  mrm_processor.py  processing_request.py  processor_manager.py  science_processor.py  state_processor.py
src/processor/idpu/: eng_processor.py  epd_processor.py  fgm_processor.py  idpu_processor.py
src/request/: __init__.py  downlink_manager.py  processing_request.py  request_getter_manager.py  request_manager.py
src/request/downlink/: downlink.py  downlink_manager.py  packet_info.py
src/request/request_getter/: eng_request_getter.py  idpu_request_getter.py  mrm_request_getter.py  request_getter.py  state_request_getter.py
src/types/: completeness_config.py  pipeline_config.py  pipeline_query.py  processing_request.py
src/util/: __init__.py  byte_tools.py  compression_values.py  constants.py  downlink_utils.py  dummy.py  general_utils.py  science_utils.py
temp/: processor.idpu.rst  processor.rst  request.request_getter.rst  util.rst
test/output/: test_exception_collector.py
test/util/: test_science_utils.py
tst/: __init__.py  dummy.py  test_coordinator.py  test_run.py
tst/data_type/: test_downlink.py  test_packet_info.py  test_pipeline_config.py  test_pipeline_query.py  test_processing_request.py
tst/metric/: test_completeness.py
tst/output/: test_exception_collector.py  test_file_name_converter.py  test_pipeline_file_mapper.py
tst/output/downlink/: test_downlink_utils.py
tst/output/metric/: test_completeness.py
tst/processor/: test_completeness.py  test_mrm_processor.py  test_processor_manager.py  test_science_processor.py  test_state_processor.py
tst/processor/idpu/: test_eng_processor.py  test_epd_processor.py  test_fgm_processor.py
tst/request/: test_request_getter_manager.py
tst/request/request_getter/: test_mrm_request_getter.py  test_request_getter.py
tst/test_data/: IBO_TEST_DIR_README.md.txt
tst/test_data/cdf/: ela_l1_eng_20200423_v01.cdf  ela_l1_epdef_20200404_v01.cdf  ela_l1_fgs_20190721_v01.cdf  ela_l1_fgs_20200701_v01.cdf  elb_l1_mrma_20200418_v01.cdf  elb_l1_state_defn_20200613_v01.cdf
tst/test_data/cdf/ibo_cdf/compressed/: em3_l1_epdef_20201204_v01.cdf  em3_l1_epdif_20201204_v01.cdf
tst/test_data/cdf/ibo_cdf/uncompressed/: em3_l1_epdef_20201204_v01.cdf  em3_l1_epdif_20201204_v01.cdf
tst/test_data/csv/df/: df_0.csv  df_1.csv  df_3.csv  df_4.csv  merged_01.csv  merged_34.csv
tst/test_data/csv/ibo/: iepd_compressed_24_v3.csv  iepde_22_v3.csv  iepdi_23_v3.csv
tst/test_data/pkt/: ela_l0_epdef_20200404_344.pkt  ela_l0_fgs_20190721_6976.pkt  ela_l0_fgs_20200307_15207.pkt  ela_l0_fgs_20200701_21137.pkt
tst/test_data/pkt/ibo_pkt/compressed/: em3_l0_epdef_20201204_31.pkt  em3_l0_epdif_20201204_14.pkt
tst/test_data/pkt/ibo_pkt/uncompressed/: em3_l0_epdef_20201204_31.pkt  em3_l0_epdif_20201204_14.pkt
tst/util/: test_byte_tools.py  test_downlink_utils.py  test_general_utils.py  test_science_utils.py
