[tool.poetry]
name = "refactor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
astropy = "^4.0.1"
pandas = "^1.1.2"
paramiko = "^2.7.2"
sqlalchemy = "^1.3.19"
spacepy = "^0.2.1"
elfin-ops-libs = "^1.9.4"
pytest = "^6.0.2"
sphinx_rtd_theme = "^0.5.0"
prefect = "^0.13.7"

[tool.poetry.dev-dependencies]
coverage = "^5.3"
black = "^20.8b1"
prospector = {extras = ["with_everything"], version = "^1.3.0"}
Sphinx = "^3.2.1"
coverage-badge = "^1.0.1"

[[tool.poetry.source]]
name = "elfin"  # This name will be used in the configuration to retreive the proper credentials
url = "http://git.elfin.ucla/api/v4/projects/5/packages/pypi/simple"  # URL used to download your packages from

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
