[tool.poetry]
name = "refactor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
astropy = "^4.0.1"
pandas = "^1.1.2"
paramiko = "^2.7.2"
sqlalchemy = "^1.3.19"
spacepy = "^0.2.1"
elfin-ops-libs = "^2.4.0"
pytest = "^6.0.2"
sphinx_rtd_theme = "^0.5.0"
prefect = "^0.13.7"
elfin-sp-libs = "^0.1.2"
gitpython = "^3.1.11"
intervaltree = "^3.1.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
Sphinx = "^3.2.1"
flake8 = "^3.8.3"
isort = "^5.5.4"
mypy = "^0.782"
pylint = "^2.6.0"
coverage = {extras = ["toml"], version = "^5.3"}

[[tool.poetry.source]]
name = "elfin"  # This name will be used in the configuration to retreive the proper credentials
url = "http://git.elfin.ucla/api/v4/projects/5/packages/pypi/simple"  # URL used to download your packages from

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pylint.message_control]
disable = [
    "invalid-name",
    "logging-fstring-interpolation",
    "logging-not-lazy",
    "fixme",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "bad-continuation",
    "broad-except",
    "comparison-with-callable",
    "too-few-public-methods",
    "locally-disabled"
]

[tool.pylint.typecheck]
generated-members = [
    "models.Categorical.*",
    "models.Event.*",
    "models.ScienceDownlink.*",
    "models.Packet.*",
    "models.Intent.*",
    "models.SciencePacket.*",
    "models.BmonData.*",
    "pd.DatetimeIndex"
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.reports]
reports = "yes"
output-format = "text"

[tool.coverage.run]
dynamic_context = "test_function"

[tool.coverage.html]
show_contexts = true

[tool.coverage.report]
precision = 2
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
